# api-pgd-client

./: .env-EXAMPLE  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/api_pgd_client/: client.py  entities.py  namedtuples.py
src/api_pgd_client/constants/: __init__.py  endpoints.py  errors.py  headers.py
src/api_pgd_client/utils/: headers.py
tests/: __init__.py  test_client.py  test_utils.py
