[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "api_pgd_client"
version = "0.1.0"
description = "Biblioteca para simplificar as chamadas à API do Programa de Gestão e Desempenho do Ministério da Gestão (GovBR) para sistemas em Python, que manipula dados do teletrabalho de servidores da administração pública."
readme = "README.rst"
authors = [
  {name = "Ivan Medeiros Jr", email = "ivsmjunior@gmail.com"}
]
maintainers = [
  {name = "Ivan Medeiros Jr", email = "ivsmjunior@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    # "Topic :: Multimedia",
    # "Topic :: Software Development :: Libraries :: Application Frameworks",
    # "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [ "govbr", "pgd", "api", "wrapper", "python" ]
license = {text = "MIT license"}
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.31.0,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

"Bug Tracker" = "https://github.com/ivanjun10r/api_pgd_client/issues"
changelog = "https://github.com/ivanjun10r/api_pgd_client/blob/master/changelog.md"
homepage = "https://github.com/ivanjun10r/api_pgd_client"
repository = "https://github.com/ivanjun10r/api_pgd_client"


# Poetry
# ------

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
bump2version = "^1.0.1"
watchdog = "^6.0.0"
sphinx = "7.2.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

# Isort
# -----
[tool.isort]
profile = "black"
line_length = 80
known_first_party = "pgd_api"
multi_line_output = 3
# skip = "venv/"
include_trailing_comma = true
use_parentheses = true



# Pytest
# ------
[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=api_pgd_client"
